[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/wall/bg_forest.png" type="Texture" id=1]
[ext_resource path="res://GroundPiece.tscn" type="PackedScene" id=2]
[ext_resource path="res://GroundGenerator.gd" type="Script" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://Rock.tscn" type="PackedScene" id=6]
[ext_resource path="res://ObstacleGenerator.gd" type="Script" id=7]
[ext_resource path="res://BatGenerator.gd" type="Script" id=8]
[ext_resource path="res://Bat.tscn" type="PackedScene" id=9]
[ext_resource path="res://BigRock.tscn" type="PackedScene" id=10]
[ext_resource path="res://Transitions/TransitionSlideIn.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/wall/GameJamCavePan.png" type="Texture" id=12]
[ext_resource path="res://Transitions/TransitionSlideOut.tscn" type="PackedScene" id=13]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -8, -80, 0, 0, 0, 0, 160, -152, 0, 0, 0, 0, 360, -152, 0, 0, 0, 0, 504, -136, 0, 0, 0, 0, 584, -88, 0, 0, 0, 0, 640, -104 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 640 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 640 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 320, 64 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 1
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, 0, 0 )

[node name="ParallaxLayerForest" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 1, 0 )
motion_mirroring = Vector2( 2564, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayerForest"]
position = Vector2( -1.52588e-05, -7.62939e-06 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2564, 288 )

[node name="ParallaxLayerCave" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0 )
motion_mirroring = Vector2( 2564, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayerCave"]
position = Vector2( -4.33681e-19, -32 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 12 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2564, 288 )

[node name="C1" type="CanvasLayer" parent="."]

[node name="TransitionSlideIn" parent="C1" instance=ExtResource( 11 )]
visible = false

[node name="TransitionSlideOut" parent="C1" instance=ExtResource( 13 )]
visible = false

[node name="C2" type="CanvasLayer" parent="."]
layer = 2

[node name="GroundGenerator" type="Node2D" parent="C2"]
position = Vector2( 944, 256 )
script = ExtResource( 3 )
Piece = ExtResource( 2 )

[node name="SpawnPoint" type="Position2D" parent="C2/GroundGenerator"]
position = Vector2( -64, 80 )

[node name="SpawnTimer" type="Timer" parent="C2/GroundGenerator"]
wait_time = 0.3

[node name="GroundPiece" parent="C2/GroundGenerator" instance=ExtResource( 2 )]
position = Vector2( -328, 80 )

[node name="GroundPiece2" parent="C2/GroundGenerator" instance=ExtResource( 2 )]
position = Vector2( -464, 80 )

[node name="GroundPiece3" parent="C2/GroundGenerator" instance=ExtResource( 2 )]
position = Vector2( -592, 80 )

[node name="GroundPiece4" parent="C2/GroundGenerator" instance=ExtResource( 2 )]
position = Vector2( -728, 80 )

[node name="GroundPiece5" parent="C2/GroundGenerator" instance=ExtResource( 2 )]
position = Vector2( -864, 80 )

[node name="GroundPiece6" parent="C2/GroundGenerator" instance=ExtResource( 2 )]
position = Vector2( -992, 80 )

[node name="GroundPiece7" parent="C2/GroundGenerator" instance=ExtResource( 2 )]
position = Vector2( -192, 80 )

[node name="GroundPiece8" parent="C2/GroundGenerator" instance=ExtResource( 2 )]
position = Vector2( 80, 80 )

[node name="GroundPiece9" parent="C2/GroundGenerator" instance=ExtResource( 2 )]
position = Vector2( -56, 80 )

[node name="ObstacleGenerator" type="Node2D" parent="C2"]
script = ExtResource( 7 )
Rock = ExtResource( 6 )
BigRock = ExtResource( 10 )

[node name="SpawnPoint" type="Position2D" parent="C2/ObstacleGenerator"]
position = Vector2( 810, 290 )

[node name="SpawnPoint2" type="Position2D" parent="C2/ObstacleGenerator"]
position = Vector2( 824, 272 )

[node name="SpawnTimer" type="Timer" parent="C2/ObstacleGenerator"]
wait_time = 2.0
autostart = true

[node name="Player" parent="C2" instance=ExtResource( 4 )]
position = Vector2( 320, 112 )

[node name="BatGenerator" type="Node2D" parent="C2"]
script = ExtResource( 8 )
Bat = ExtResource( 9 )

[node name="QueueTimer" type="Timer" parent="C2/BatGenerator"]
wait_time = 0.2

[node name="SpawnTimer" type="Timer" parent="C2/BatGenerator"]
wait_time = 4.0
autostart = true

[node name="Path2D" type="Path2D" parent="C2/BatGenerator"]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="C2/BatGenerator/Path2D"]
position = Vector2( -8, -80 )
rotation = -0.404894

[node name="EatenWall" type="RigidBody2D" parent="C2"]
collision_layer = 2
collision_mask = 2147483648
mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="C2/EatenWall"]
position = Vector2( 16, -152 )
shape = SubResource( 2 )

[node name="LastPos" type="Position2D" parent="C2/EatenWall"]
position = Vector2( 104, 0 )

[node name="EatenWall2" type="RigidBody2D" parent="C2"]
position = Vector2( 616, 8 )
collision_layer = 2
collision_mask = 2147483648
mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="C2/EatenWall2"]
position = Vector2( 32, -152 )
shape = SubResource( 3 )

[node name="HighZone" type="Area2D" parent="C2"]
position = Vector2( 0, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="C2/HighZone"]
position = Vector2( 320, 0 )
shape = SubResource( 4 )

[node name="Display" type="Node2D" parent="C2"]

[node name="Cover" type="ColorRect" parent="C2/Display"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 15.9892, 9.1057 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="C2/Display"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 15.9899, 0.690996 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="C2/Display"]
margin_top = 336.0
margin_right = 40.0
margin_bottom = 376.0
rect_scale = Vector2( 15.9899, 0.690996 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FancyText" type="RichTextLabel" parent="C2/Display"]
margin_left = 216.0
margin_top = 342.0
margin_right = 416.0
margin_bottom = 382.0
bbcode_enabled = true
bbcode_text = "[center][wave]STAY ALIVE[/wave][/center]"
text = "STAY ALIVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressLine" type="Label" parent="C2/Display"]
margin_right = 643.0
margin_bottom = 30.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="WinTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SwitchTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="timeout" from="C2/GroundGenerator/SpawnTimer" to="C2/GroundGenerator" method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="C2/ObstacleGenerator/SpawnTimer" to="C2/ObstacleGenerator" method="_on_SpawnTimer_timeout"]
[connection signal="game_start" from="C2/Player" to="." method="_on_Player_game_start"]
[connection signal="timeout" from="C2/BatGenerator/QueueTimer" to="C2/BatGenerator" method="_on_QueueTimer_timeout"]
[connection signal="timeout" from="C2/BatGenerator/SpawnTimer" to="C2/BatGenerator" method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="C2/HighZone" to="C2/Player" method="_on_HighZone_body_entered"]
[connection signal="body_exited" from="C2/HighZone" to="C2/Player" method="_on_HighZone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
[connection signal="timeout" from="SwitchTimer" to="." method="_on_SwitchTimer_timeout"]
